# Revision history for Perl extension Encode.
#
# $Id: Changes,v 3.19 2022/08/04 04:43:23 dankogai Exp dankogai $
#
$Revision: 3.19 $ $Date: 2022/08/04 04:43:23 $
! bin/encguess
  Pulled: encguess: remove duplicate "the"
  https://github.com/dankogai/p5-encode/pull/173
! bin/enc2xs
  Pulled: Fix spelling in comment
  https://github.com/dankogai/p5-encode/pull/171
! t/gsm0338.t
  Pulled: fix gsm0338 test compatibility with perl < 5.8.8
  https://github.com/dankogai/p5-encode/pull/170

3.19 2022/08/04 04:43:23
! lib/Encode/Alias.pm /t/Aliases.t
  Add ISO-8859-8-I as an alias of ISO-8859-8
  <8ac3918e-5d77-4815-f1e6-6577397068c6@iki.fi>
  https://en.wikipedia.org/wiki/ISO-8859-8-I

3.18 2022/06/25 02:05:01
! lib/Encode/MIME/Header.pm t/mime-header.t
  Pulled: Encode::MIME::Header: Fix base64 word decoding
  https://github.com/dankogai/p5-encode/pull/169
! t/Unicode_trailing_nul.t t/truncated_utf8.t
  t/utf32warnings.t t/xml.t
  Skip so Github Actions are happy
  https://github.com/dankogai/p5-encode/blob/main/.github/workflows/versions.yml

3.17 2022/04/07 03:06:40
! bin/enc2xs t/enc_data.t t/enc_module.t t/encoding.t t/jperl.t
  Pulled: Fix Issue #144, spurious warnings from -Wc++-compate,
   and a few related nits
  https://github.com/dankogai/p5-encode/pull/168
! MANIFEST
  add t/utf32warnings.t which was missing
! t/taint.t
  Pulled: Skip taint tests if your perl was built without taint support
  https://github.com/dankogai/p5-encode/pull/167
! Unicode/Unicode.pm
  Pulled: fix link to Unicode standard
  https://github.com/dankogai/p5-encode/pull/165
! t/Unicode_trailing_nul.t
  Pulled: Use note() instead of diag()
  https://github.com/dankogai/p5-encode/pull/164

3.16 2021/10/13 08:29:13
! Makefile.PL
  Pulled: Only add -Werror=declaration-after-statement for 5.035004 and earlier
  https://github.com/dankogai/p5-encode/pull/162

3.15 2021/10/08 15:29:23
! Encode.xs
  Revert Encode 3.13 (commit 2397881) which should have been done w/ pull 161