@@ -7,7 +7,7 @@ BEGIN {
         print "1..0 # Skip: EBCDIC\n";
         exit 0;
     }
-    require Config; import Config;
+    require Config; Config->import();
     if ($Config{'extensions'} !~ /\bEncode\b/) {
       print "1..0 # Skip: Encode was not built\n";
       exit 0;
