@@ -1,7 +1,7 @@
 BEGIN {
     if (! -d 'blib' and -d 't'){ chdir 't' };
     unshift @INC,  '../lib';
-    require Config; import Config;
+    require Config; Config->import();
     if ($Config{'extensions'} !~ /\bEncode\b/) {
       print "1..0 # Skip: Encode was not built\n";
       exit 0;
