@@ -1,7 +1,7 @@
 # $Id: enc_data.t,v 2.6 2022/04/07 03:06:40 dankogai Exp $
 
 BEGIN {
-    require Config; import Config;
+    require Config; Config->import();
     if ($Config{'extensions'} !~ /\bEncode\b/) {
       print "1..0 # Skip: Encode was not built\n";
       exit 0;
